--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tsc": "tsc --watch"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@stripe/stripe-js": "^7.3.1",
+    "@types/jszip": "^3.4.1",
+    "@vercel/blob": "^1.1.1",
     "better-auth": "^1.2.8",
+    "dotenv": "^17.2.0",
     "framer-motion": "^12.12.1",
+    "jszip": "^3.10.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "replicate": "^1.0.1",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
