--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@react-email/components": "^0.3.1",
+    "@react-email/render": "^1.1.3",
     "@stripe/stripe-js": "^7.3.1",
     "@types/jszip": "^3.4.1",
     "@vercel/blob": "^1.1.1",
@@ -22,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "replicate": "^1.0.1",
+    "resend": "^4.6.0",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prisma": "^6.8.2",
