--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-email/render": "^1.1.3",
     "@stripe/stripe-js": "^7.3.1",
     "@types/jszip": "^3.4.1",
+    "@types/stripe": "^8.0.417",
     "@vercel/blob": "^1.1.1",
     "better-auth": "^1.2.8",
     "dotenv": "^17.2.0",
