--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^7.3.1",
     "@types/jszip": "^3.4.1",
     "@types/stripe": "^8.0.417",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "better-auth": "^1.2.8",
     "dotenv": "^17.2.0",
@@ -30,6 +31,7 @@
     "react-dom": "^19.0.0",
     "replicate": "^1.0.1",
     "resend": "^4.6.0",
+    "sonner": "^2.0.6",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
