--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pull:env": "vercel env pull .env"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@react-email/components": "^0.3.1",
     "@react-email/render": "^1.1.3",
