--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^17.2.0",
     "framer-motion": "^12.12.1",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
