--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "generate": "prisma generate",
     "migrate": "prisma migrate dev",
     "studio": "prisma studio",
-    "pull:env": "vercel env pull .env"
+    "pull:env": "vercel env pull .env",
+    "test:training-session": "tsx scripts/test-training-session.ts",
+    "test:frontend-integration": "tsx scripts/test-frontend-integration.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -24,7 +26,6 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "better-auth": "^1.2.8",
-    "client,": "link:@prisma/client,",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.12.1",
     "jszip": "^3.10.1",
@@ -42,11 +43,13 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
